Gjorde klart the usual

--- a/src/app/dialogue/dialogue.component.html
+++ b/src/app/dialogue/dialogue.component.html
@@ -1,8 +1,8 @@
 
 
-    <p>Displaystrangertext i dialogue: {{displayStrangerText}}</p>
-    <p>Displaybeverages är nu: {{displayBeverages}}</p>
-    <p>Theusualbeverage theUsual--->dialogue: {{theUsualBeverage}}</p>
+    <!-- <p>Displaystrangertext i dialogue: {{displayStrangerText}}</p>
+    <p>Displaybeverages är nu: {{displayBeverages}}</p> -->
+    
     <!-- Kan man lägga en ännu större ngif över allt som ska visas på första sidan? Nej, för man måste också stänga av andra grejer -->
     <div *ngIf="displayStrangerText">
 
