--- a/src/app/the-usual/the-usual.component.html
+++ b/src/app/the-usual/the-usual.component.html
@@ -1,4 +1,4 @@
-{{welcomeBackText}}
+<h3>{{welcomeBackText}}</h3>
 <div *ngIf="displayTheUsualButton">
     <button (click)="theUsualButton()">The usual</button>
 </div>
