--- a/src/app/select-beverage/select-beverage.component.css
+++ b/src/app/select-beverage/select-beverage.component.css
@@ -3,6 +3,7 @@
 .beverageContainer{
   background-color:rgb(201, 195, 119);
    width:50%;
+   margin-top:0;
    
 }
 .selectBeverageButton{
@@ -40,4 +41,11 @@
 }
 .ownChoiceInput{
     margin:0.5em;
+}
+
+.order{
+    background-color:rgb(192, 186, 177);
+    padding:0.5em;
+    margin-bottom:0;
+    display:inline-block;
 }
