--- a/src/app/right-to-be-forgotten/right-to-be-forgotten.component.html
+++ b/src/app/right-to-be-forgotten/right-to-be-forgotten.component.html
@@ -1,3 +1,4 @@
 
 <button (click)="emptyLocalStorageButton()" class="forgetUserButton">I want to be forgotten, thanks.</button>
 
+<p *ngIf="userIsForgotten" class="userIsForgotten">{{forgottenUserText}}</p>
