--- a/src/app/select-beverage/select-beverage.component.css
+++ b/src/app/select-beverage/select-beverage.component.css
@@ -10,6 +10,7 @@
     padding:0.5em;
     margin-right:3em;
     margin-top:0.5em;
+    cursor:pointer;
 }
 .beverageList{
     display:flex;
@@ -29,6 +30,7 @@
     align-self: flex-end;
     border:2px solid pink;
     padding:0.5em;
+    cursor:pointer;
 }
 .ownChoiceLabel{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
