--- a/src/app/dialogue/dialogue.component.html
+++ b/src/app/dialogue/dialogue.component.html
@@ -41,10 +41,10 @@
     </div>
     
     
-    <!-- Visar text om man tar bort sitt namn -->
+    <!-- Visar text om man tar bort sitt namn
     <div *ngIf="forgottenUser && !displayStrangerText" class="forgetUser">
         {{glomdeUser}}
-    </div>
+    </div> -->
 
 
    
